--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "d3": "^5.16.0",
     "vue": "^2.6.11",
+    "vue-json-viewer": "^2.2.14",
     "vue-router": "^3.1.6",
     "vue-tree-chart": "^1.2.9",
     "vuetify": "^2.2.11",
